--- a/Pzl.Did.Mobile.sln/Pzl.Did.Api/Pzl.Did.Api.csproj
+++ b/Pzl.Did.Mobile.sln/Pzl.Did.Api/Pzl.Did.Api.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="Controllers\Constants.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
+    <Compile Include="Controllers\ExpressImportController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\TimeEntriesController.cs" />
     <Compile Include="Global.asax.cs">
